Fix alignment

--- a/srsi_front/src/pages/DistinctiiOJI/stylesheet.scss
+++ b/srsi_front/src/pages/DistinctiiOJI/stylesheet.scss
@@ -1,5 +1,6 @@
 #awardList{
     list-style-type: none;
+    text-align: center;
 }
 #awardListContainer{
     display: flex;
